--- a/day2/style.css
+++ b/day2/style.css
@@ -12,12 +12,16 @@
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
+  background-color: #f0f0f0;
 }
 
 /* Nav bar */
 header {
   padding: 25px 25px;
   background-color: var(--primary-background-color);
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 nav {
@@ -71,15 +75,19 @@ nav {
 }
 
 .btn-primary:hover {
-  background-color: #23b2f4;  
+  background-color: #23b2f4;
 }
-
 
 .cart-icon {
-    color: var(--primary-skyblue-color);
+  color: var(--primary-skyblue-color);
 }
 
+/* Container */
 
+.container {
+  display: flex;
+  justify-content: space-between;
+}
 
 /* Product Listing */
 /* General Page Styling */
@@ -96,7 +104,9 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  margin: 50px;
+  /* margin: 50px; */
+  margin: 50px 0px 0px 50px;
+  width: 70vw;
 }
 
 /* Product Card */
@@ -107,7 +117,7 @@ nav {
   width: 220px;
   text-align: center;
   padding: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   min-height: 350px;
   max-height: 550px;
@@ -115,18 +125,18 @@ nav {
 
 .product-card:hover {
   transform: translateY(-4px);
-  box-shadow: 0 8px 18px rgba(0,0,0,0.1);
+  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.1);
 }
 
 /* Product Image */
 .product-card img {
   width: 100%;
-  height: 180px;              /* fix height */
-  object-fit: contain;        /* keeps full image visible */
+  height: 180px; /* fix height */
+  object-fit: contain; /* keeps full image visible */
   border-radius: 10px;
   margin-bottom: 10px;
-  background-color: #f3f4f6;  /* light gray bg for consistency */
-  padding: 10px;              /* little spacing inside box */
+  background-color: #f3f4f6; /* light gray bg for consistency */
+  padding: 10px; /* little spacing inside box */
   box-sizing: border-box;
 }
 
@@ -139,9 +149,9 @@ nav {
 }
 
 .flex {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
 }
 
 /* Rating Stars */
@@ -171,4 +181,53 @@ nav {
 
 .add-to-cart-btn:hover {
   background: var(--primary-skyblue-color);
+}
+
+/* Cart Calculation */
+#cart-table-container {
+  margin-top: 50px;
+  margin-right: 30px;
+  height: 350px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+  padding: 20px;
+  position: sticky;
+  top: 120px;
+}
+
+.empty-cart {
+  font-size: xx-large;
+  color: red;
+}
+
+table,
+tr,
+th,
+thead,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+td {
+  padding: 10px;
+}
+
+.reset-cart {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+.reset-cart:hover {
+  background-color: rgb(246, 99, 99);
 }
