--- a/day2/style.css
+++ b/day2/style.css
@@ -192,7 +192,7 @@ nav {
 #cart-table-container {
   margin-top: 50px;
   margin-right: 30px;
-  height: 350px;
+  min-height: 350px;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -202,11 +202,46 @@ nav {
   padding: 20px;
   position: sticky;
   top: 120px;
+  max-height: 600px;
 }
 
-.empty-cart {
-  font-size: xx-large;
+.cart-products ul li {
+  list-style: none;
+  width: 250px;
+  display: flex;
+  margin-top: 15px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d8d8d8;
+}
+
+.cart-items {
+  display: flex;
+  justify-content: space-between;
+  width: 230px;
+  margin-left: 10px;
+  /* align-items: center; */
+}
+
+.cart-items > div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.x-icon {
+  display: flex;
+  justify-content: end;
+  font-size: large;
+  cursor: pointer;
   color: red;
+}
+
+.cart-details {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  margin-top: 15px;
+  font-size: large;
 }
 
 table,
