--- a/day3/style.css
+++ b/day3/style.css
@@ -1,8 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
 *{
     margin: 0;
     padding: 0;
 }
 
+:root {
+  --primary-skyblue-color: #1090cb;
+  --primary-background-color: #e8f4fa;
+}
+
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+
+header {
+    display: flex;
+    justify-content: end;
+    margin: 30px 30px;
+}
 
 .light-theme{
     background-color: white;
@@ -15,3 +32,79 @@
     color: white;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+
+form {
+  margin-top: 20px;
+  padding: 20px 50px 20px 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 5px #ccc;
+  min-width: 60vw;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+/* input, select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  outline: none;
+} */
+
+
+.user-inputs {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  outline: none;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+
+#gender, #hobbies {
+  display: flex;
+  gap: 20px;
+}
+
+select {
+  display: block;
+  width: 50%;
+  padding: 8px;
+  margin-top: 5px;
+  outline: none;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  background-color: var(--primary-skyblue-color);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: large;
+}
+
+button:hover {
+  background-color: #249cd3;
+}
+
+label {
+  margin-bottom: 50px;
+}
+
+.error {
+  color: red;
+  font-size: 13px;
+}
