--- a/day3/style.css
+++ b/day3/style.css
@@ -34,6 +34,8 @@ header {
 
 .container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin-top: 30px;
 }
@@ -51,16 +53,6 @@ form {
   margin-bottom: 15px;
 }
 
-/* input, select {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  outline: none;
-} */
-
-
 .user-inputs {
   width: 100%;
   padding: 8px;
@@ -73,6 +65,7 @@ form {
 #gender, #hobbies {
   display: flex;
   gap: 20px;
+  margin-top: 5px;
 }
 
 select {
@@ -107,4 +100,15 @@ label {
 .error {
   color: red;
   font-size: 13px;
+}
+
+pre {
+  background: #222;
+  color: #0f0;
+  padding: 15px;
+  border-radius: 8px;
+  overflow-x: auto;
+  width: 750px;
+  min-height: 100px;
+  margin-bottom: 150px;
 }
