--- a/day3/style.css
+++ b/day3/style.css
@@ -102,6 +102,15 @@ label {
   font-size: 13px;
 }
 
+.data-container {
+  margin-top: 20px;
+}
+
+.data-container h2{
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 pre {
   background: #222;
   color: #0f0;
@@ -111,4 +120,5 @@ pre {
   width: 750px;
   min-height: 100px;
   margin-bottom: 150px;
+  box-shadow: 0 0 5px #ccc;
 }
