--- a/day3/style.css
+++ b/day3/style.css
@@ -111,12 +111,23 @@ label {
   margin-bottom: 15px;
 }
 
-pre {
-  padding: 15px;
-  border-radius: 8px;
-  overflow-x: auto;
-  width: 750px;
-  min-height: 100px;
-  margin-bottom: 150px;
+#display-box div {
+  display: flex;
   box-shadow: 0 0 5px #ccc;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+
+pre {
+  width: 750px;
+}
+
+.icon {
+  cursor: pointer;
+}
+
+.icon:hover {
+  color: #818181;
 }
